fixes #4737.  Added checkmark character to toggle button for high contrast mode (commit for ptbrunet IBM CLA)
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@11179 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -200,6 +200,10 @@
 	border-left:0px !important;
 }
 
+/* In high contrast mode, display the check symbol */
+.dijit_a11y .dijitToggleButtonChecked .dijitToggleButtonIconChar { 
+	display: inline !important; 
+}
 
 
 
@@ -1344,7 +1348,7 @@ img.dijitColorPaletteUnder {
 
 /* Toolbar A11y */
 .dijit_a11y .dijitButtonContents .dijitButtonText {
-	display: block !important;
+	display: inline !important;
 }
 
 .dijitTextArea {
